Реализован механизм обновления refresh token
