# server/src/routes/auth/refresh-tokens/createSession.js
@@ -1,19 +1,19 @@
-const createAccessToken = require('./createAccessToken')
+const createAccessToken = require('../login/createAccessToken')
 const uuidV4 = require('uuid/v4')
 const db = require('../../../db/models')
 const Session = db.session
 
 module.exports = async (sessionInfo) => {
-  const { user, ua, ip, fingerprint } = sessionInfo
-  const accessToken = await createAccessToken(user)
+  const { userId, ua, ip, fingerprint, User } = sessionInfo
+  const accessToken = await createAccessToken({ userId, role: User.role })
   const refreshToken = uuidV4()
   const expiresIn = new Date(new Date().getTime() + 30 * 24 * 60 * 60 * 1000) // 30 дней
 
   try { // TODO добавить транзакцию
     await Session.create({
-      userId: user.userId,
+      userId: userId,
       refreshToken,
-      ua: ua.source,
+      ua,
       ip,
       fingerprint,
       expiresIn
