# server/src/routes/index.js
@@ -1,6 +1,7 @@
 module.exports = app => {
   app.use(require('./swagger/'))
   app.use(require('./auth/login/'))
+  app.use(require('./auth/refresh-tokens/'))
   app.use(require('./auth/logout/'))
   app.use(require('./server/get/'))
   app.use(require('./server/edit/'))
